# worktree-mcp-manager

./: .gitignore  .mcp.json  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
crates/worktree-cli/: Cargo.toml  rewrite.py
crates/worktree-cli/src/: main.rs  rewrite_main.py
crates/worktree-core/: Cargo.toml
mcp-server/: audit-log.ts  index.ts  package-lock.json  package.json  rate-limiter.test.ts  rate-limiter.ts  tools.test.ts  utils.test.ts  utils.ts  vitest.config.ts  worktree-guard.ts
mcp-server/tools/: agent-tools.d.ts  agent-tools.d.ts.map  agent-tools.js.map  agent-tools.ts  environment-tools.d.ts  environment-tools.d.ts.map  environment-tools.js.map  environment-tools.ts  git-tools.d.ts  git-tools.d.ts.map  git-tools.js.map  git-tools.ts  ide-utils.d.ts  ide-utils.d.ts.map  ide-utils.js.map  ide-utils.ts  merge-tools.d.ts  merge-tools.d.ts.map  merge-tools.js.map  merge-tools.ts  types.d.ts  types.d.ts.map  types.ts  utility-tools.d.ts  utility-tools.d.ts.map  utility-tools.js.map  utility-tools.ts  workflow-tools.d.ts  workflow-tools.d.ts.map  workflow-tools.js.map  workflow-tools.ts  worktree-tools.d.ts  worktree-tools.d.ts.map  worktree-tools.js.map  worktree-tools.ts
scripts/: build-prod.sh
src/: App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  process.rs
src/lib/: git-errors.ts  retry.ts  router.ts  tauri-commands-new.ts  tauri-commands.ts  theme.ts  utils.ts
src/stores/: app-store.ts
src/styles/: globals.css
src/types/: index.ts  (+2 more)
(+92 files in other folders)
