[package]
name = "worktree-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worktree-cli"
path = "src/main.rs"

[dependencies]
worktree-core = { path = "../worktree-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
